commit before add slider

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<div class="main-slider-border">
 						<div class="main-slider">
 							<div class="main-slider-item">
-								<img class="main-image" src="./assets/img/857A1591-Edit_360x.webp" alt="">
+								<img id="mainImg" class="main-image" src="./assets/img/857A1591-Edit_360x.webp" alt="">
 							</div>
 						</div>
 					</div>
@@ -84,20 +84,20 @@
 					<div class="smoll-slider-border">
 						<div class="smoll-slider">
 							<div class="smoll-slider-item">
-								<img class="smoll-image" src="./assets/img/857A1591-Edit_360x.webp" alt="">
+								<img id="0" class="smoll-image" src="./assets/img/857A1591-Edit_360x.webp" alt="">
 							</div>
 							<div class="smoll-slider-item">
-								<img class="smoll-image" src="./assets/img/857A1584-2_360x.webp" alt="">
+								<img id="1" class="smoll-image" src="./assets/img/857A1584-2_360x.webp" alt="">
 							</div>
 							<div class="smoll-slider-item">
-								<img class="smoll-image" src="./assets/img/857A1839_540x.webp" alt="">
+								<img id="2" class="smoll-image" src="./assets/img/857A1839_540x.webp" alt="">
 							</div>
 							<div class="smoll-slider-item">
-								<img class="smoll-image"
+								<img id="3" class="smoll-image"
 									src="./assets/img/giftbox_675bf339-43f6-47ee-b9b9-806f01a05d16_360x.webp" alt="">
 							</div>
 							<div class="smoll-slider-item">
-								<img class="smoll-image"
+								<img id="4" class="smoll-image"
 									src="./assets/img/ScreenShot2021-11-25at4.44.56PM_1c8ac9dd-9ab1-4cbe-a37a-8fb93b2c84f1_360x.webp"
 									alt="">
 							</div>
@@ -362,143 +362,149 @@
 
 					</div>
 				</div>
-
-				<!--  ONE USER START -->
-				<!-- WITH ANSWER -->
-				<div class="review__main__container">
-					<div class="user-review__container">
-						<div class="user-review-item">
-							<span class="user-letter">B</span>
-							<div class="user-block">
-								<div class="user-name">brooklyn d.</div>
-								<div class="all-reviev__container">
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-								</div>
-							</div>
-						</div>
-						<span class="user-review-item">
-							05/04/22
-						</span>
-					</div>
-					<div class="user-review__container">
-						<p class="short-review">So yummy!</p>
-						<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon snack!
-							Quick, easy and so yummy!</p>
-
-						<!--  ANSWER -->
-						<div class="answer__container">
-							<div class="answer__content">
-								<div class="answer-item answer__header">
-									<div class="answer__header-align">
-										<span class="answer-icon"></span>
-										<span class="answer-name">Store Owner</span>
+				<div class="all-reviews__container">
+					<!--  ONE USER START -->
+					<!-- WITH ANSWER -->
+					<div class="review__main__container">
+						<div class="user-review__container">
+							<div class="user-review-item">
+								<span class="user-letter">B</span>
+								<div class="user-block">
+									<div class="user-name">brooklyn d.</div>
+									<div class="all-reviev__container">
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
 									</div>
-									<div class="answer__header-align">
-										<span class="answer-date">05/12/22</span>
+								</div>
+							</div>
+							<span class="user-review-item">
+								05/04/22
+							</span>
+						</div>
+						<div class="user-review__container user-review__container-answer">
+							<p class="short-review">So yummy!</p>
+							<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon
+								snack!
+								Quick, easy and so yummy!</p>
+
+							<!--  ANSWER -->
+							<div class="answer__container">
+								<div class="answer__content">
+									<div class="answer-item answer__header">
+										<div class="answer__header-alight">
+											<span class="answer-icon"></span>
+											<span class="answer-name">Store Owner</span>
+										</div>
+										<div class="answer__header-align">
+											<span class="answer-date">05/12/22</span>
+										</div>
+
 									</div>
-
-								</div>
-								<div class="answer-item answer__text">Matthew, thank you so much for the "best vegan snack"
-									title –
-									we're honoured!
-									So glad you're loving the bites.</div>
-							</div>
-						</div>
-						<!-- END ANSWER -->
-
-					</div>
-				</div>
-
-
-				<!--  ONE USER END -->
-
-				<!--  ONE USER START -->
-				<div class="review__main__container">
-					<div class="user-review__container">
-						<div class="user-review-item">
-							<span class="user-letter">B</span>
-							<div class="user-block">
-								<div class="user-name">brooklyn d.</div>
-								<div class="all-reviev__container">
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
+									<div class="answer-item answer__text">Matthew, thank you so much for the "best vegan snack"
+										title –
+										we're honoured!
+										So glad you're loving the bites.</div>
 								</div>
 							</div>
+							<!-- END ANSWER -->
 						</div>
-						<span class="user-review-item">
-							05/04/22
-						</span>
 					</div>
-					<div class="user-review__container">
-						<p class="short-review">So yummy!</p>
-						<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon snack!
-							Quick, easy and so yummy!</p>
-					</div>
-				</div>
-				<!--  ONE USER END -->
 
-				<!--  ONE USER START -->
-				<div class="review__main__container">
-					<div class="user-review__container">
-						<div class="user-review-item">
-							<span class="user-letter">B</span>
-							<div class="user-block">
-								<div class="user-name">brooklyn d.</div>
-								<div class="all-reviev__container">
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
+
+					<!--  ONE USER END -->
+
+					<!--  ONE USER START -->
+					<div class="review__main__container">
+						<div class="user-review__container">
+							<div class="user-review-item">
+								<span class="user-letter">B</span>
+								<div class="user-block">
+									<div class="user-name">brooklyn d.</div>
+									<div class="all-reviev__container">
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+									</div>
 								</div>
 							</div>
+							<span class="user-review-item">
+								05/04/22
+							</span>
 						</div>
-						<span class="user-review-item">
-							05/04/22
-						</span>
+						<div class="user-review__container">
+							<p class="short-review">So yummy!</p>
+							<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon
+								snack!
+								Quick, easy and so yummy!</p>
+						</div>
 					</div>
-					<div class="user-review__container">
-						<p class="short-review">So yummy!</p>
-						<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon snack!
-							Quick, easy and so yummy!</p>
-					</div>
-				</div>
-				<!--  ONE USER END -->
+					<!--  ONE USER END -->
 
-				<!--  ONE USER START -->
-				<div class="review__main__container">
-					<div class="user-review__container">
-						<div class="user-review-item">
-							<span class="user-letter">B</span>
-							<div class="user-block">
-								<div class="user-name">brooklyn d.</div>
-								<div class="all-reviev__container">
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
-									<span class="star all-revie-item"> </span>
+					<!--  ONE USER START -->
+					<div class="review__main__container">
+						<div class="user-review__container">
+							<div class="user-review-item">
+								<span class="user-letter">B</span>
+								<div class="user-block">
+									<div class="user-name">brooklyn d.</div>
+									<div class="all-reviev__container">
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+									</div>
 								</div>
 							</div>
+							<span class="user-review-item">
+								05/04/22
+							</span>
 						</div>
-						<span class="user-review-item">
-							05/04/22
-						</span>
+						<div class="user-review__container">
+							<p class="short-review">So yummy!</p>
+							<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon
+								snack!
+								Quick, easy and so yummy!</p>
+						</div>
 					</div>
-					<div class="user-review__container">
-						<p class="short-review">So yummy!</p>
-						<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon snack!
-							Quick, easy and so yummy!</p>
+					<!--  ONE USER END -->
+
+					<!--  ONE USER START -->
+					<div class="review__main__container">
+						<div class="user-review__container">
+							<div class="user-review-item">
+								<span class="user-letter">B</span>
+								<div class="user-block">
+									<div class="user-name">brooklyn d.</div>
+									<div class="all-reviev__container">
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+										<span class="star all-revie-item"> </span>
+									</div>
+								</div>
+							</div>
+							<span class="user-review-item">
+								05/04/22
+							</span>
+						</div>
+						<div class="user-review__container">
+							<p class="short-review">So yummy!</p>
+							<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon
+								snack!
+								Quick, easy and so yummy!</p>
+						</div>
 					</div>
+					<!--  ONE USER END -->
+
 				</div>
-				<!--  ONE USER END -->
+
 			</div>
 
 
@@ -719,7 +725,7 @@
 		</div>
 
 	</a>
-	<script src="./js/sctipt.js"></script>
+	<script type="module" src="./js/sctipt.js"></script>
 </body>
 
 </html>
